Fix date picker calendar being too small on IE 11 (refs #124)

--- a/app/shared/form-fields/form-fields.less
+++ b/app/shared/form-fields/form-fields.less
@@ -25,3 +25,7 @@
     }
   }
 }
+
+.react-date-picker__calendar {
+  min-width: 282px !important;  // Fix width in IE 11.
+}
